# CoinToss

Coin/app/: CMakeLists.txt  build.gradle.kts
Coin/app/src/main/: AndroidManifest.xml
Coin/app/src/main/cpp/: CMakeLists.txt  coin.cpp
Coin/app/src/main/java/com/example/coin/: MainActivity.kt
Coin/gradle/wrapper/: gradle-wrapper.properties
